2012-05-29  Guillaume Lazzara  <z@lrde.epita.fr>

	* debian/compat: Upgrade to debhelper 9.

2012-05-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* debian/olena-bin.install: Add shared files in olena-bin.

2012-05-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* debian/changelog: Change distribution.

2012-05-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* debian/control: Update maintainer name.

2012-05-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* debian/copyright: Update commiter name.

2012-05-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* debian/control: Set packages as optional.

2012-05-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* debian/rules: Handles '-j' option for make.

2012-05-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* debian/control: Update Standards-Version.

2012-05-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* debian/rules: Update deprecated dh_clean -k command.

2012-05-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* debian/rules: Add missing required rules.

2012-05-22  Guillaume Lazzara  <z@lrde.epita.fr>

	Add missing description in manpages.

	* debian/scribo-cli.1,
	* debian/scribo-viewer.1: Here.

2012-05-22  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix Lintian warnings.

	* debian/changelog: Update date.

	* debian/compat: Increase minimum required version of debhelper.

	* debian/control: Add dependencies and fix description.

	* debian/olena.menu,
	* debian/copyright: Add a missing endline.

	* debian/gbp.conf: New.

	* debian/olena-dev.manpages: Rename to...
	* debian/olena-bin.manpages: ... this.

	* debian/rules: Use standard target names.

	* debian/watch: New.

2012-05-22  Guillaume Lazzara  <z@lrde.epita.fr>

	Add options for dpkg-source.

	* debian/source/format: Force dpkg-source 3.0.

	* debian/source/local-options,
	* debian/source/options: New.

2012-05-22  Guillaume Lazzara  <z@lrde.epita.fr>

	* debian/control: Add dependencies.

2012-01-30  Guillaume Lazzara  <z@lrde.epita.fr>

	* debian/HOWTO: Add more details.
